# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
