[project]
name = "advent-of-code-2022"
description = "Advent of Code solutions for 2022."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Peter Schaedler", email = "pwschaedler@gmail.com"}
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "mypy",
    "isort"
]

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
disable = [
    "C0114",
    "W2301",
    "line-too-long",
    "invalid-name"
]
